[project]
name = "data-structures-and-design-patterns"
version = "0.1.0"
description = ""
authors = [
    { name = "Bruno Vicente", email = "brunoeovicente@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.12"

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
[dependency-groups]
dev = [
    "pytest (>=9.0.3,<10.0.0)",
    "black (>=26.5.0,<27.0.0)",
    "ruff (>=0.15.13,<0.16.0)",
    "mypy (>=2.1.0,<3.0.0)",
    "ipykernel (>=7.2.0,<8.0.0)"
]
